--- a/style.css
+++ b/style.css
@@ -63,6 +63,11 @@ p {
 .calendar-header {
     margin: auto;
     text-align: center;
+    display: flex;
+}
+
+.calendar-header .fa-chevron-left, .calendar-header .fa-chevron-right {
+    margin: auto;
 }
 
 .edit, .delete {
@@ -171,7 +176,7 @@ td .event {
     width: 20%;
 }
 
-.category-filter div {
+.cat-group {
     display: flex;
     justify-content: space-between;
     width: 60%;
@@ -193,4 +198,50 @@ input[type="color"] {
 
 .fa-plus {
     margin: auto;
+}
+
+.calendar-view {
+    margin: auto;
+    width: 20%;
+    display: flex;
+    justify-content: space-evenly;
+    padding: .5% 0;
+}
+
+.selected-button {
+    background-color: #2c6581;
+}
+
+.calendar-day, .calendar-week {
+    border: solid 1px black;
+    border-collapse: collapse;
+}
+
+.calendar-day td, .calendar-week td {
+    height: 3em;
+    border-right: solid 1px black;
+}
+
+.calendar-day th, .calendar-week th {
+    height: 3em;
+}
+
+.time {
+    width: 5%;
+}
+
+.time h4 {
+    text-align: center;
+    margin: auto;
+    font-size: 1em;
+}
+
+.current-time-line {
+    border-top: solid 2px red;
+    position: relative;
+    margin: 0;
+}
+
+.current-day {
+    background-color: gray;
 }
